--- a/package.json
+++ b/package.json
@@ -25,13 +25,11 @@
 		"theme",
 		"color scheme"
 	],
-	"dependencies": {
-		"@codemirror/language": "^0.20.2",
-		"@lezer/highlight": "^0.16.0"
-	},
 	"devDependencies": {
-		"@codemirror/state": "^0.20.0",
-		"@codemirror/view": "^0.20.6",
+		"@codemirror/language": "^6.0.0",
+		"@codemirror/state": "^6.0.0",
+		"@codemirror/view": "^6.0.0",
+		"@lezer/highlight": "^1.0.0",
 		"@sindresorhus/tsconfig": "^3.0.0",
 		"@vdemedes/prettier-config": "^2.0.1",
 		"prettier": "^2.6.2",
@@ -39,8 +37,9 @@
 		"xo": "^0.49.0"
 	},
 	"peerDependencies": {
-		"@codemirror/state": "^0.20.0",
-		"@codemirror/view": "^0.20.6"
+		"@codemirror/language": "^6.0.0",
+		"@codemirror/state": "^6.0.0",
+		"@codemirror/view": "^6.0.0"
 	},
 	"prettier": "@vdemedes/prettier-config",
 	"xo": {
