--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	},
 	"type": "module",
 	"exports": "./dist/index.js",
+	"types": "./dist/index.d.ts",
 	"scripts": {
 		"prepare": "npm run build",
 		"build": "tsc",
