--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"url": "https://vadimdemedes.com"
 	},
 	"type": "module",
+	"main": "./dist/index.js",
 	"exports": "./dist/index.js",
 	"types": "./dist/index.d.ts",
 	"scripts": {
